# Quantum-Random-Number-Generation-for-Cyber-Security

./: .gitignore  CMakeLists.txt  README.md  main.py  optimize_deploy.sh
.github/workflows/: ci.yml
config/: firewall_params.json
docs/: technical_spec.md
src/firewall/: entropy_engine.cpp  entropy_injector.h  packet_filter.cpp
src/qrng/: core.py  processor.cpp  qkd_sim.py
tests/: performance_bench.py
